...
            app:layout_constraintTop_toBottomOf="@+id/input_email" />

    </android.support.design.widget.TextInputLayout>

    <Button
        style="@style/AppTheme.Button.GetStarted"
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        android:textSize="20dp"
...
